# GLFractalExplorer

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
dependencies/glad/: CMakeLists.txt
include/: BaseFractal.hpp  CMakeLists.txt  IFractal.hpp
include/exception/: ShaderError.hpp  ShaderException.hpp  WindowError.hpp
src/: BaseFractal.cpp  CMakeLists.txt
src/algebraic_fractals/: CMakeLists.txt  Mandelbrot.cpp
src/other/: CMakeLists.txt  ShaderHotloading.cpp
src/other/resources/: shader.frag
